--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -42,11 +42,11 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
 
-//    def dagger = "2.20"
-//    implementation "com.google.dagger:dagger-android:$dagger"
-//    implementation "com.google.dagger:dagger-android-support:$dagger" // if you use the support libraries
-//    kapt "com.google.dagger:dagger-android-processor:$dagger"
-//    kapt "com.google.dagger:dagger-compiler:$dagger"
+    def dagger = "2.20"
+    implementation "com.google.dagger:dagger-android:$dagger"
+    implementation "com.google.dagger:dagger-android-support:$dagger" // if you use the support libraries
+    kapt "com.google.dagger:dagger-android-processor:$dagger"
+    kapt "com.google.dagger:dagger-compiler:$dagger"
 
     def room_version = "2.1.0-rc01"
     implementation "androidx.room:room-runtime:$room_version"
