--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':core', ':repository', ':repo_core', ':room_ds'
+include ':app', ':core', ':repository', ':repo_core', ':room_ds', ':retrofit_ds'
