--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+
     implementation "com.google.dagger:dagger-android:$dagger"
 //    implementation "com.google.dagger:dagger-android-support:$dagger" // if you use the support libraries
     kapt "com.google.dagger:dagger-android-processor:$dagger"
