--- a/retrofit_ds/build.gradle
+++ b/retrofit_ds/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.8.0'
+
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation project(':repo_core')
