--- a/room_ds/build.gradle
+++ b/room_ds/build.gradle
@@ -46,7 +46,10 @@ dependencies {
 
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
 
     implementation project(':repo_core')
 }
